@@ -98,7 +98,11 @@ BUG FIXES
 	4.4.0 systems.  (This is a bug in their header files but we have
 	added a workaround.)
 
-    o   fixed the clipping problem in the quartz device
+    o   Fixed the clipping problem in the quartz device.
+
+    o   Subsetting a factor swapped the order of the attributes, which
+	identical() cares about.  (PR#6799)
+
 
 
 		CHANGES IN R VERSION 1.9.0
